  spans multiple lines. Three ``]`` characters indicate the end of such a block.
- ``!`` immediately before a phrase set up to be replaced (see gen_changelog.py) stops that occurrence from being replaced.

Template for new versions:

## New Features

## Fixes

## Misc Improvements

## Removed

===end
]]]

# Future

## New Features

## Fixes

## Misc Improvements

## Removed

# 51.04-r1.1

## New Features
- `stonesense`: added option ``EXTRUDE_TILES`` to slightly expand sprite to avoid gaps (on by default)
- `stonesense`: added option ``PIXELPERFECT_ZOOM`` to change the zoom scale to avoid gaps (off by default)
- `stonesense`: added back minecart track graphics

## Fixes
- `stonesense`: fixed announcement text rendering off-screen with larger font sizes
- `stonesense`: screen dimensions are now properly set when overriden by a window manager
- `stonesense`: fixed glass cabinets and bookcases being misaligned by 1 pixel
- `stonesense`: fixed unrevealed walls being hidden by default
- `stonesense`: vampires no longer show their true name when they shouldn't
- `stonesense`: fixed debug performance timers to show milliseconds as intended
- `stonesense`: ``CACHE_IMAGES`` now disables mipmapping, stopping sprites from going transparent
- `stonesense`: fixed issue where depth borders wouldn't be rendered for some walls
- `stonesense`: fixed issue where tiles near the bottom edge would be culled

## Misc Improvements
- `stonesense`: improved the way altars look
- `stonesense`: fog no longer unnecessarily renders to a separate bitmap
- `stonesense`: added new connective tiles for pools of blood and vomit

# 51.02-r1

## Misc Improvements
- `stonesense`: ``keybinds.txt`` config file is now read from ``dfhack-config/stonesense/keybinds.txt``
- `stonesense`: added some missing artwork for bookcases, displays, and offering places
- `stonesense`: reorganized the position of some existing art to be more intuitive