@@ -1023,6 +1023,15 @@ void c_sprite::assemble_world_offset(int x, int y, int z, int plateoffset, Tile 
         }
 
         ALLEGRO_COLOR shade_color = shadeAdventureMode(get_color(b), b->fog_of_war, b->designation.bits.outside);
+        if (ssConfig.show_designations && containsDesignations(b->designation, b->occ)) {
+            if (b->occ.bits.dig_auto) { shade_color = al_map_rgba(0, 255, 127, 127); }
+            if (b->occ.bits.dig_marked) {
+                shade_color = al_map_rgba(0, 127, 255, 127);
+                if (b->occ.bits.dig_auto) {
+                    shade_color = partialBlend(shade_color, al_map_rgba(0, 255, 127, 127), 25);
+                }
+            }
+        }
         if(chop && ( halftile == HALFPLATECHOP)) {
             if(shade_color.a > 0.001f) {
                 b->AssembleSprite(
